python3.9 (3.9.1-4) UNRELEASED; urgency=medium

  * Depend on media-types instead of mime-support. Closes: #981016.

 -- Matthias Klose <doko@debian.org>  Tue, 26 Jan 2021 12:21:29 +0100

python3.9 (3.9.1-3) unstable; urgency=medium

  * Update to the 3.9 branch 2021-01-20.
  * Configure again --with-system-libmpdec.
  * Update symbols files.

 -- Matthias Klose <doko@debian.org>  Wed, 20 Jan 2021 15:49:22 +0100

python3.9 (3.9.1-2) unstable; urgency=medium

  * Update to the 3.9 branch 2021-01-10.

 -- Matthias Klose <doko@debian.org>  Sun, 10 Jan 2021 16:42:50 +0100

python3.9 (3.9.1-1) unstable; urgency=medium

  * Python 3.9.1 release.

 -- Matthias Klose <doko@debian.org>  Tue, 08 Dec 2020 08:51:42 +0100

python3.9 (3.9.1~rc1-2) unstable; urgency=medium

  * Don't expect the test_ttk_textonly test to pass.

 -- Matthias Klose <doko@debian.org>  Fri, 27 Nov 2020 20:38:39 +0100

python3.9 (3.9.1~rc1-1) unstable; urgency=medium

  * Python 3.9.1 release candidate 1.
  * libpython3.9-stdlib: Depend on tzdata, recommend ca-certificates.
  * libpython3.9-stdlib: Depend on media-types | mime-support instead of
    mime-support.
  * Update VCS attributes.
  * Add python3-tk test dependency for the failing-tests* autopkg tests.
  * Bump standards version.
  * Add build conflict with git, or else the git information of the packaging
    is encoded in the upstream version information.
  * Build with -fno-inline-small-functions on hppa and sh4.
    Closes: #972458, #972202.

 -- Matthias Klose <doko@debian.org>  Fri, 27 Nov 2020 09:20:22 +0100

python3.9 (3.9.0-5) unstable; urgency=medium

  * Update to the 3.9 branch 2020-10-19.
  * python3.9-venv: Depend on python3-distutils.

 -- Matthias Klose <doko@debian.org>  Mon, 19 Oct 2020 11:51:18 +0200

python3.9 (3.9.0-4) unstable; urgency=medium

  * Fix module-install-venv autopkg test dependency.

 -- Matthias Klose <doko@debian.org>  Sun, 18 Oct 2020 11:42:38 +0200

python3.9 (3.9.0-3) unstable; urgency=high
